docs: update notifications documentation
- Rewrote notifications.mdx with comprehensive notification guide
- Clarified Slack notifications are per-run (1+ tests = 1 notification)
- Explained email is weekly summaries only (not per-run)
- Added cross-reference in github-actions.mdx linking to notifications
- Fixed title typo and removed redundant sections
- Improved scannability with tables and clear structure

--- a/configuration/github-actions.mdx
+++ b/configuration/github-actions.mdx
@@ -51,6 +51,10 @@ Looking for automatic AI-powered PR reviews? See [GitHub App](/configuration/git
   </Step>
 </Steps>
 
+<Note>
+Tests triggered via GitHub Actions automatically send [notifications](/core-concepts/notifications) to configured Slack channels when complete.
+</Note>
+
 ## Basic Usage
 
 The simplest way to run tests is without any additional configuration:
